plugins/javaFX/testData/highlighting/propertyTagIncompatiblePrimitive.fxml
<?import javafx.scene.layout.VBox?>
<?import javafx.scene.shape.Rectangle?>
<?import java.lang.Double?>
<?import java.lang.Integer?>
<fx:root xmlns:fx="http://javafx.com/fxml" type="VBox">
    <padding>
        <<error descr="Unable to coerce java.lang.Integer to javafx.geometry.Insets">Integer</error> fx:value="10"/>
    </padding>
    <Rectangle width="100" height="100">
        <VBox.vgrow>
            <<error descr="Unable to coerce java.lang.Double to javafx.scene.layout.Priority">Double</error> fx:value="20"/>
        </VBox.vgrow>
    </Rectangle>
</fx:root>